--- a/sections/初等概率论.tex
+++ b/sections/初等概率论.tex
@@ -626,9 +626,9 @@ Attachment: Independence:\begin{equation}    X_i \independent X_j\Rightarrow \be
             \vdots\\
             \epsilon_m
         \end{pmatrix}
-        +\begin{bmatrix}
+        +\begin{pmatrix}
             \mu _1\\\mu _2\\ \vdots\\\mu _n
-        \end{bmatrix}=\bm{B}\vec{\varepsilon }+\vec{\mu }
+        \end{pmatrix}=\bm{B}\vec{\varepsilon }+\vec{\mu }
     \end{equation}
 
     
