--- a/sections/生物统计学概论.tex
+++ b/sections/生物统计学概论.tex
@@ -623,7 +623,8 @@ Contingency table is an easy way to display categorical variables, an example:
     
         
 
-% \subsection{Clinical Trial Design}
+\subsection{Clinical Trial Design}
+\subsection{GWAS}
 % \subsubsection{Four-Stage Clinical Trial}
 
 % \subsubsection{Relative Statistical Inference}
