--- a/sections/数据科学导论.tex
+++ b/sections/数据科学导论.tex
@@ -796,7 +796,7 @@ dev.off()
             \label{}
         \end{figure}
         
-        \item \lstinline|pch = | \textbf{p}oint \textbf{ch} aracter, value taken in \lstinline|0:25| for defulat point charaters listed below, or use (vector of) charater to specify, e.g. \lstinline|pch = c('❄')|
+        \item \lstinline|pch = | \textbf{p}oint \textbf{ch}aracter, value taken in \lstinline|0:25| for defulat point charaters listed below, or use (vector of) charater to specify, e.g. \lstinline|pch = c('❄')|
         \begin{figure}[H]
             \centering
             \includegraphics[width=0.3\linewidth]{sections/images/2022-08-18-11-14-15.png}
@@ -804,7 +804,7 @@ dev.off()
             \label{}
         \end{figure}
 
-        \item \lstinline|lty = | \textbf{l}ine \textbf{type}, value taken in \lstinline|1:6| (0 for not shown)
+        \item \lstinline|lty = | \textbf{l}ine \textbf{ty}pe, value taken in \lstinline|1:6| (0 for not shown)
         \begin{figure}[H]
             \centering
             \includegraphics[width=0.4\linewidth]{sections/images/2022-08-18-11-15-34.png}
